[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/sunOctopus.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_16x16DungeonTileset.v4.png" type="Texture" id=2]
[ext_resource path="res://assets/boss_damaged.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]

atlas = ExtResource( 2 )
region = Rect2( 160, 176, 32, 32 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="sunOctopus" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="shoot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="shot_container" type="Node" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="sound_damaged" type="AudioStreamPlayer2D" parent="."]

stream = ExtResource( 3 )
volume_db = -5.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]


